--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@mui/material": "^6.3.0",
     "@mui/styled-engine-sc": "^6.3.0",
     "axios": "^1.7.9",
+    "buffer": "^6.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.2",
     "styled-components": "^6.1.13",
+    "sweetalert2": "^11.15.10",
     "yup": "^1.6.1"
   },
   "devDependencies": {
